--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,11 @@
 CHANGELOG message_highlight
 ===========================
 
+RELEASE 2.0.1
+-------------
+
+- minor version bump for composer test
+
 RELEASE 2.0
 -----------
 
