minor text changes

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG message_highlight
 ===========================
 
+RELEASE 2.6
+
+- some text changes
+
 RELEASE 2.5.2
 
 - fix composer.json
