--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG message_highlight
 ===========================
 
+RELEASE 3.1
+
+- fix some 1.3 deprecated functions
+
 RELEASE 2.6
 
 - some text changes
