--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG message_highlight
 ===========================
 
+RELEASE 4.0
+
+- support elastic skin
+
 RELEASE 3.1
 
 - fix some 1.3 deprecated functions
