--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG message_highlight
 ===========================
 
+RELEASE 4.2
+
+- support config file
+
 RELEASE 4.1
 
 - support darker colors
