--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,10 @@
 CHANGELOG message_highlight
 ===========================
 
+RELEASE 4.3
+
+- polish and czech translations
+
 RELEASE 4.2
 
 - support config file
